# mcs-dismath-sem3

coursework/: CMakeLists.txt  cliui.cpp  cliui.h  constants.h  operations.cpp  operations.h  task.md  z8.cpp  z8.h
coursework/.cache/clangd/index/: cliui.cpp.41FD641EF4228E1E.idx  cliui.h.D9CF47E009FD06A5.idx  constants.h.5B455F7BBE14ADE8.idx  main.cpp.B381BBF1F33BB4A2.idx  operations.cpp.38221051DC6CC15F.idx  operations.h.4C36083419F0507E.idx  z8.cpp.8449CBE804420A14.idx  z8.h.D3269F2436145F57.idx
coursework/report/: main.tex
coursework/report/tex/pages/: заключение.tex  источники.tex  постановка_задачи.tex  приложение_А.tex  приложение_Б.tex  приложение_В.tex  титульник.tex
coursework/report/tex/sections/мат_описание/: мат_описание.tex
coursework/report/tex/sections/особенности_реализации/: особенности_реализации.tex
coursework/report/tex/sections/результаты_работы_программы/: результаты_работы_программы.tex
lab1/: cliui.cpp  cliui.h  constants.h  main.cpp  multiset.cpp  multiset.h  universe.cpp  universe.h
lab1/report/tex/pages/: заключение.tex  приложение_В.tex  титульник.tex
lab1/report/tex/sections/мат_описание/: мат_описание.tex
lab1/report/tex/sections/особенности_реализации/: особенности_реализации.tex
lab1/tex/: main.tex
lab1/tex/tex/lib/: barrel.tex
lab1/tex/tex/pages/: введение.tex  заключение.tex
lab1/tex/tex/sections/мат_описание/: мат_описание.tex
lab2/: CMakeLists.txt  bdd.h  cli_ui.h  main.cpp  truth_table.h  zhegalkin.h
lab2/report/: main.tex
lab2/report/tex/pages/: заключение.tex  источники.tex
(+5 files in other folders)
